--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -50,6 +50,7 @@
 <script src="~/assets/js/sweetalert.min.js"></script>
 <!-- BEGIN CORE TEMPLATE JS -->
 <script src="~/pages/js/pages.min.js"></script>
+<script src="~/assets/js/card.js"></script>
 <script src="~/assets/js/Controllers/index.js"></script>
 <!-- END CORE TEMPLATE JS -->
 <!-- BEGIN PAGE LEVEL JS -->
