--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -297,3 +297,48 @@ label, input, button, select, textarea {
     right: 12px;
     top: 6px;
 }
+.form-group-default.form-group-default-select2 {
+    padding: 0;
+}
+
+select.full-width + .select2-container {
+    width: 100% !important;
+}
+.form-group-default.form-group-default-select2 .select2-container .select2-selection--single {
+    padding-top: 20px;
+    height: 52px;
+    border: 0 !important;
+}
+
+.select2-container .select2-selection.select2-selection--single {
+    height: 35px;
+}
+
+.form-group-default .select2-container .select2-selection, .select2-container-multi .select2-choices {
+    border-color: transparent;
+}
+
+.select2-container .select2-selection {
+    background-image: none;
+    border-radius: 2px;
+    border: 1px solid rgba(0, 0, 0, 0.07) !important;
+    padding: 2px 9px;
+    transition: border 0.2s linear 0s;
+}
+
+    .select2-container .select2-selection .select2-selection__rendered {
+        padding: 0;
+        padding-left: 3px;
+        padding-top: 1px;
+    }
+
+.select2-container .select2-selection .select2-selection__arrow {
+    top: auto;
+    bottom: 5px;
+    right: 10px !important;
+    left: auto;
+    background: transparent;
+    border-left: 0px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
