--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -41,7 +41,7 @@
                     </ul>
                     <!-- fieldsets -->
                     <fieldset>
-                     <div class="card-progress" style="background-color: rgba(255, 255, 255, 0.8); display: block;">
+                     <div class="card-progress" style="background-color: rgba(255, 255, 255, 0.8); display: block;" data-ng-show="vm.ajax">
                         <div class="progress-circle-indeterminate progress-circle-master"></div>
                     </div>
                         <h2 class="fs-title">Check you account Status</h2>
